Fix - layout issues in contact.html

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1775,6 +1775,14 @@ p.card-text {
   border-color: var(--cc-dark);
 }
 
+.form-wrapper {
+  flex: 1;
+}
+
+.card-deck-wrapper {
+  flex: 1;
+}
+}
 /*  ************************************************************************************
   Pricing
 ****************************************************************************************/
